# diagfw-repo

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
diagfw/: __init__.py  cli.py  collector.py  iperf.py  model.py  streaming.py  transport.py  uart.py
tests/: test_smoke.py
